--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,9 +8,17 @@
   bottom: 20px;
   right: 20px;
   z-index: 1000;
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
 }
+
+.whatsapp-icon{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
 .whatsapp-icon:hover img {
   transform: scale(1.1);
 }
